# test-cd

./: CMakeLists.txt  Makefile  README.md  cic.c
.github/workflows/: cmake.yml
SSL/win/: ssl-48.lib
libuv/win/: uv_a.lib
